# ChangeLog for app-emacs/highline
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/highline/ChangeLog,v 1.35 2014/02/24 01:09:01 phajdan.jr Exp $

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> highline-7.2.2.ebuild:
  x86 stable wrt bug #500906

*highline-7.2.2 (29 Dec 2013)

  29 Dec 2013; Ulrich Müller <ulm@gentoo.org> highline-7.2.1.ebuild,
  +highline-7.2.2.ebuild, +files/50highline-gentoo.el:
  Version bump. Drop to unstable on s390. Specify LICENSE more precisely.

  17 Aug 2009; Christian Faulhammer <fauli@gentoo.org> -highline-6.1.ebuild:
  clean up

  08 Apr 2009; Raúl Porcel <armin76@gentoo.org> highline-6.1.ebuild,
  highline-7.2.1.ebuild:
  Drop s390 keyword

  18 Mar 2009; Ulrich Mueller <ulm@gentoo.org> -highline-7.2.ebuild:
  Remove intermediate version.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> highline-7.2.1.ebuild:
  stable ppc, bug 260704

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  highline-7.2.1.ebuild:
  stable x86, bug 260704

  01 Mar 2009; Tiago Cunha <tcunha@gentoo.org> highline-7.2.1.ebuild:
  stable amd64, bug 260704

*highline-7.2.1 (29 Jan 2009)

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  +highline-7.2.1.ebuild:
  version bump

*highline-7.2 (19 Dec 2008)

  19 Dec 2008; Ulrich Mueller <ulm@gentoo.org> -highline-7.1.ebuild,
  +highline-7.2.ebuild:
  Version bump. Remove intermediate version.

*highline-7.1 (14 Dec 2008)

  14 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +highline-7.1.ebuild:
  Version bump. LICENSE changed to GPL-3.

  04 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  -highline-4.2-r1.ebuild, -highline-4.2.1.ebuild:
  clean up, this includes a drop of stable s390 keyword

  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> highline-4.2.1.ebuild,
  highline-6.1.ebuild:
  Do not assign SIMPLE_ELISP since elisp.eclass now detects this case
  automatically.
