@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/highline/highline-7.2.2.ebuild,v 1.2 2014/02/24 01:09:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/highline/highline-7.2.2.ebuild,v 1.3 2014/02/24 11:04:52 nimiux Exp $
 
 EAPI=5
 
@@ -13,7 +13,7 @@ SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${P}.el.xz"
 
 LICENSE="GPL-3+"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~s390 x86"
+KEYWORDS="amd64 ~ppc ~s390 x86"
 
 SITEFILE="50${PN}-gentoo.el"
 
