@@ -3,10 +3,10 @@ DEPEND=>=virtual/emacs-21
 DESCRIPTION=Minor mode to highlight current line in buffer
 EAPI=5
 HOMEPAGE=http://www.emacswiki.org/emacs/HighlineMode
-KEYWORDS=~amd64 ~ppc ~s390 x86
+KEYWORDS=amd64 ~ppc ~s390 x86
 LICENSE=GPL-3+
 RDEPEND=>=virtual/emacs-21
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~ulm/distfiles/highline-7.2.2.el.xz
 _eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=498059df82267264ebbc70f2b53ad965
+_md5_=df2c5ba242a7a674273671297c51c9db
