@@ -10,4 +10,4 @@ RDEPEND=app-text/ghostscript-gpl dev-libs/libpcre sys-libs/ncurses jit? ( !hppa?
 SLOT=0/3.8.1_rc3
 SRC_URI=mirror://gnu-alpha/octave/octave-3.8.1-rc3.tar.gz
 _eclasses_=autotools	b0a4d5334d34abe7b6829eb87cf3c544	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=ec2820a38d7a592d63df2221a3029e35
+_md5_=a5798bccb566efaf8c2acdfa6ad3d97e
