@@ -19,16 +19,16 @@ AUX octave-3.8.0-pkgbuilddir.patch 1413 SHA256 277a2cf88d50db3125e5bffb989626f80
 DIST octave-3.6.4.tar.bz2 15627315 SHA256 fa185df9591f5d740f4d37ff6eaf06db576fdd3e0ddd9d0737365799e5d1c962 SHA512 a49ef50161272618c9543057be5903e1e50b7f4ecb929777f6715d4b3a07a92c36a5b13958c52d8b942b6c7e7e3f7844409d0062eb02bdb3972d7194312b7a81 WHIRLPOOL f51c764ce1ed911661bb3dd1d31a2321f09c0d887ead7bbe8c1f4ad1ebe05137223afb5ff18fc57b83d631936975964a85e4fed9a087760935acb5a35050cda0
 DIST octave-3.8.0.tar.bz2 17669638 SHA256 519330c6dd34eb69ca26a811722948fceac2acebd67ba924eba9b34a2e5a94f9 SHA512 2e8b81b418e235cddd6678d7cc83b8441c64b36f98854ab704c1b34d5ff711d3f6cce7ffe33f5f70a7bc231b2219b39d16033e6b9d04174cbab68f21c5a8abec WHIRLPOOL ace3d162722b0e47d78fbf8029396c3e5690a4260d5fcef09be4a1a58f7a1144888f5829a47f77d344ca20fa6844c55b80955e7093c5cd2e98a89188b6ec3708
 DIST octave-3.8.1-rc3.tar.gz 20586726 SHA256 31599a8c113d855212e13feedd74c5191541dfd18f4be1eafc786d700dd6172d SHA512 022b5a8d65af0e0038dedb6ddc6097647ef7cb6b3b675d6c2e8bf8e0c1865eb39454ce798492bd42d6119328d25874b942c58c2b5dda265810e4b9a3c93d777d WHIRLPOOL 7f8ea6a6ff985064c3f13f16b4bdfb951442005d5e32390ac635c17709194016db9deeccd7caf5de11f4ca96372ec95cbc6e5a23166cb0aec9c99ddd46d6ca63
-EBUILD octave-3.6.4-r1.ebuild 3542 SHA256 0c624df61510bf51580b4bd73b5b8607ed8ea1278c22cdc2c1ec692222e7e8a0 SHA512 2e1c08950d726b6fe19f328957b42c6c5aff03882b4ca5e0aafdf4941d94b93e43ffced0edb410cf983482df65112d71231d769dce38c712091ad7bfc54737a6 WHIRLPOOL 73edd0eed90a44d3411a59aac4f0ceb12a6df47f62237a3d81e22e2fa5f8e64fe2769437ab3981cb4f48cd9ccb9d6125e7690332a0643ad0967e3612d049f53e
-EBUILD octave-3.6.4.ebuild 3478 SHA256 686c2b49e3aaadf7bc41ecc46908126d65f1510c285a575efb74a5586d28d3b4 SHA512 897cac6e403bf709b6eafa0fa885905b91015d40cff5fd7d6187bd45c0ec95dd68dee3415152b9c29b85bc48b781797b1ada9d3001ea0625c6f97f5bd4dd48b7 WHIRLPOOL 09fdeafb13a7a814fd1304a493c76227fe7b0b7ea420cdcab2c944864a0319f62505f214be9796edee57cc370e8a7e6be0dbbe55035afbbc2a4c37033a6bebf4
-EBUILD octave-3.8.0.ebuild 6464 SHA256 60a9b37e89df2489da8ae5d3bb59f685c0da064ab7550d5efdc4cb85e80dc75e SHA512 9fcd452017a2cea84898e3f45594eb301097b6b45dfbd17876732ad3b7509712ec3492e3ac88b9ad3d1ce1b2d8b5567305c713088f6be362be9e2ce219678a0f WHIRLPOOL aaee1a612900c6ed78e95169f74a054d729eb48d06f6d4418414d158a9f2205b1121ffedc823db08050e1ce4bb869cc5d9c55b541b11d155c2520fc86198e783
-EBUILD octave-3.8.1_rc3.ebuild 6371 SHA256 eccc7a4d80fcfced9573a6f64a89338e6a88407b22e97b0fbfa618708a53315e SHA512 9c1ff994152ef571ab8c83bb1218e76e80e6ce70657edce2d1d8fdedb6efa725fa8dea84f2bb69441c49761a5829042d58961368be1cc05b4f85b796fc77693f WHIRLPOOL 8710ca9b1d4f2a92d98eb61b5a932af7c10474403f0ab4510e3396bd89d544ad7f06c34e39b78ff92b55f879733688a28397b822f9e7dee751dfe7b2321cff6b
-MISC ChangeLog 36873 SHA256 68fb1cf00e0f979af2b8f31481c33a217d347069305fcb2fe0468f4f241d647e SHA512 102f8af6bc8bbc84813c7fd62b0aeb9b4bc20c15419bf9ab33870aca36bc27b85f073b1ae560d545bf2f45dc152288f19d692b3cd005bce1a15458bc4d16f05c WHIRLPOOL a2dd9f2a73e976606297e0edfa6d2f6a919d6f9bc081d90bd8531cc671aed20576cb3be13fc9acbf60fbe1064c78c543118d85ef40fd36a886d7c97ca61e1fa4
+EBUILD octave-3.6.4-r1.ebuild 3546 SHA256 1e303b6d0b5dae850e83a12cfdf2c48f856d9eedf619a8eef4538ae811b8c591 SHA512 c5740862f898795f7f69af11da70ee479e610002385bfe2d46b6ded46e7e7e8eef772bd3e21db00da148065672d6cd58cf6484d80a2b759324f1d1f7805c9d36 WHIRLPOOL 46b56b068c35bad96c458e86c87feb14b7998a7ebf05a17fb9dba31631f0dd1e7b570852c393010f925a356091e312a765e5d50fbb4fb8de7cec1f35ef8e26f9
+EBUILD octave-3.6.4.ebuild 3481 SHA256 33e2e2bc509d636036b854b1db531daaf8cbd245740696c9fbed5d7bdd632e0e SHA512 c03a63c4cec131a9384d5eacc67f8724b102e48a4356318a89b8eec2c34b2da9c19e903e2e0a2f1b408803044c7689078aaadf527b90bcd3a6c0b6b8f619ae13 WHIRLPOOL c14ff910f1bab7362fc95d4730a3a752abfc011b5d7ce655afd9bafbdac7c1dfc989a7b0286a4dbd54836cb15522149561ebaffe77c99c58762c824dfc1dc873
+EBUILD octave-3.8.0.ebuild 6468 SHA256 db8511b581c33cc815a3526e15b1897c0d01e917e61e71d1e56065811bbcae99 SHA512 d88a1db4e285c6d629443edae890bef749283fd0f00a76e37f736ba9c1d46e02529cb2c981a656921650732432bfdf4b385de85f4c1dfb70a8fcc9f4c6b670a1 WHIRLPOOL b26e19e7b45a31b2830edbf8de9f3bbcf17c7d0924a181bc9c9eee9f917741695b986f68d754e83919afea078731cc6afebe229348eb15c247810c9b9201031b
+EBUILD octave-3.8.1_rc3.ebuild 6378 SHA256 ad8e3bc68c060a2d7ac69e3867d00c5a1a166e0c534162209672e00bff60c5b6 SHA512 1e0d147df96014b3276b1dac28a25bbb5f6449217794ffc8d4029e19475cbbc472287a894718d2981d3c7b21d32ed7906d52cb3c30ffc3b4e50c1dc3ffb7685e WHIRLPOOL b65737bfc1d05ae6c7d22b1e6b0f5b25af0763bfcdb1a3222bb5b2d7e135779b46fc1bf3507b153983eee2f89416d2b080e88fa224b38a2443674791ed2a4110
+MISC ChangeLog 37188 SHA256 6932cbf5428a77a1784472142c21d4ebd439a3053829d8899c0e03aedeb2ae12 SHA512 bdb3cb65faaf49dda3603e975b4e2c9ae4b7966b80827007b6a0ea2b321ceb99cfc1a7f53f8be86f12870911677323961a9e0efb9f515b65659ffe427b687ecf WHIRLPOOL d06564f425ba0c69cb85a60404a72ebb1799ca764c37ba8ee4f397e82fc3b5035ffbf55442e697ca1d575fd0037dc6036a2b2d81a31da819fcb69aa04f22d802
 MISC metadata.xml 1022 SHA256 1b65adbdcc076642a258fff07b7e362922ac22a8498b20bd96e2c97a2ea45a10 SHA512 bf855dac972af2db8e39396a50fbdc1199f28bf4b29cf2c78315f608584f0258a12985f021003b84553bf289c734397d8c7f92666c022b6b1f68f1ebccf89966 WHIRLPOOL b6d90f1eeec501dab72503cc677792abca0fbc1476d627868090abc2438940ec24088fc95a53df058dffc793f8101a7057a85c64aef6395da6c39864c2f45305
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMJOxkACgkQoBEVQmGOlx9CMAD8DCvZRIQHN/+uWw4oqP/xugNU
-oAcBTeNuTZ/EHLtEVRsA/3aDm2Vx5k3Ya3mGkTBggd9gPE9yz/TrM2b31G3wIjna
-=VS8g
+iF4EAREIAAYFAlMLKjEACgkQoBEVQmGOlx+h8wEAwHV0vvXefiRrlxMiLnVeL1GJ
++OAdvBCSQGs/hwpalaMBALluMzcKhYJVLo74I5BoNfJHppPP0NPT1Jp2hnCaF47X
+=1Ccr
 -----END PGP SIGNATURE-----
