@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.6.4-r1.ebuild,v 1.2 2014/02/20 08:50:37 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.6.4-r1.ebuild,v 1.3 2014/02/24 11:16:44 gienah Exp $
 
 EAPI=5
 
@@ -129,6 +129,6 @@ src_install() {
 	autotools-utils_src_install
 	use doc && dodoc $(find doc -name \*.pdf)
 	[[ -e test/fntests.log ]] && dodoc test/fntests.log
-	echo "LDPATH=${EROOT%/}/usr/$(get_libdir)/${P}" > 99octave
+	echo "LDPATH=${EROOT}usr/$(get_libdir)/${PN}/${PV}" > 99octave
 	doenvd 99octave
 }
