@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/highline
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/highline/ChangeLog,v 1.35 2014/02/24 01:09:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/highline/ChangeLog,v 1.36 2014/02/24 11:04:52 nimiux Exp $
+
+  24 Feb 2014; Chema Alonso <nimiux@gentoo.org> highline-7.2.2.ebuild:
+  Stable for amd64 wrt bug #500906
 
   24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> highline-7.2.2.ebuild:
   x86 stable wrt bug #500906
